--- a/03-Correlation.Rmd
+++ b/03-Correlation.Rmd
@@ -1,13 +1,11 @@
 # Lab 3: Correlation
 
+```{=html}
 <script>
 $("#coverpic").hide();
 </script>
-
-<span class="newthought">
-If ... we choose a group of social phenomena with no antecedent knowledge of the causation or absence of causation among them, then the calculation of correlation coefficients, total or partial, will not advance us a step toward evaluating the importance of the causes at work.
----Sir Ronald Fisher
-</span>
+```
+[If ... we choose a group of social phenomena with no antecedent knowledge of the causation or absence of causation among them, then the calculation of correlation coefficients, total or partial, will not advance us a step toward evaluating the importance of the causes at work. ---Sir Ronald Fisher]{.newthought}
 
 In lecture and in the textbook, we have been discussing the idea of correlation. This is the idea that two things that we measure can be somehow related to one another. For example, your personal happiness, which we could try to measure say with a questionnaire, might be related to other things in your life that we could also measure, such as number of close friends, yearly salary, how much chocolate you have in your bedroom, or how many times you have said the word Nintendo in your life. Some of the relationships that we can measure are meaningful, and might reflect a causal relationship where one thing causes a change in another thing. Some of the relationships are spurious, and do not reflect a causal relationship.
 
@@ -15,8 +13,8 @@ In this lab you will learn how to compute correlations between two variables in 
 
 ## General Goals
 
-1. Compute Pearson's r between two variables using software
-2. Discuss the possible meaning of correlations that you observe
+1.  Compute Pearson's r between two variables using software
+2.  Discuss the possible meaning of correlations that you observe
 
 ### Important Info
 
@@ -35,8 +33,9 @@ x  <- c(1,3,2,5,4,6,5,8,9)
 y  <- c(6,5,8,7,9,7,8,10,13)
 cor(x,y)
 ```
- Well, that was easy. 
- 
+
+Well, that was easy.
+
 #### scatterplots
 
 Let's take our silly example, and plot the data in a scatter plot using ggplot2, and let's also return the correlation and print it on the scatter plot. Remember, ggplot2 wants the data in a data.frame, so we first put our x and y variables in a data frame.
@@ -133,11 +132,10 @@ view(dfSummary(whr_data))
 You should be able to see that there is data for many different countries, across a few different years. There are lots of different kinds of measures, and each are given a name. I'll show you some examples of asking questions about correlations with this data, then you get to ask and answer your own questions.
 
 #### My Question #1
- 
+
 For the year 2017 only, does a countries measure for "freedom to make life choices" correlate with that countries measure for " Confidence in national government"?
 
 Let's find out. We calculate the correlation, and then we make the scatter plot.
-
 
 ```{r}
 
@@ -167,7 +165,7 @@ cor(smaller_df$`Freedom to make life choices`,
     smaller_df$`Confidence in national government`)
 ```
 
-Now we see the correlation is .408. 
+Now we see the correlation is .408.
 
 Although the scatter plot shows the dots are everywhere, it generally shows that as Freedom to make life choices increases in a country, that countries confidence in their national government also increase. This is a positive correlation. Let's do this again and add the best fit line, so the trend is more clear, we use `geom_smooth(method=lm, se=FALSE)`. I also change the `alpha` value of the dots so they blend it bit, and you can see more of them.
 
@@ -233,14 +231,13 @@ ggplot(smaller_df, aes(x=`Positive affect`,
 
 Bam, there we have it. As positive affect goes up, negative affect goes down. A negative correlation.
 
-
 ### Generalization Exercise
 
-This generalization exercise will explore the idea that correlations between two measures can arise by chance alone. There are two questions to answer. For each question you will be sampling random numbers from uniform distribution. To conduct the estimate, you will be running a simulation 100 times. The questions are: 
+This generalization exercise will explore the idea that correlations between two measures can arise by chance alone. There are two questions to answer. For each question you will be sampling random numbers from uniform distribution. To conduct the estimate, you will be running a simulation 100 times. The questions are:
 
-1. Estimate the range (minimum and maximum) of correlations (using pearons's r) that could occur by chance between two variables with n=10.
+1.  Estimate the range (minimum and maximum) of correlations (using pearons's r) that could occur by chance between two variables with n=10.
 
-2. Estimate the range (minimum and maximum) of correlations (using pearons's r) that could occur bychance between two variables with n = 100.
+2.  Estimate the range (minimum and maximum) of correlations (using pearons's r) that could occur bychance between two variables with n = 100.
 
 Use these tips to answer the question.
 
@@ -258,9 +255,9 @@ y <- runif(n=10, min=0, max=10)
 cor(x,y)
 ```
 
-Running the above code will give different values for the correlation each time, because the numbers in x and y are always randomly different. We might expect that because x and y are chosen randomly that there should be a 0 correlation. However, what we see is that random sampling can produce "fake" correlations just by chance alone. We want to estimate the range of correlations that chance can produce. 
+Running the above code will give different values for the correlation each time, because the numbers in x and y are always randomly different. We might expect that because x and y are chosen randomly that there should be a 0 correlation. However, what we see is that random sampling can produce "fake" correlations just by chance alone. We want to estimate the range of correlations that chance can produce.
 
-Tip 3: One way to estimate the range of correlations that chance can produce is to repeat the above code many times. For example, if you ran the above code 100 times, you could save the correlations each time, then look at the smallest and largest correlation. This would be an estimate of the range of correlations that can be produced by chance. How can you repeat the above code many times to solve this problem? 
+Tip 3: One way to estimate the range of correlations that chance can produce is to repeat the above code many times. For example, if you ran the above code 100 times, you could save the correlations each time, then look at the smallest and largest correlation. This would be an estimate of the range of correlations that can be produced by chance. How can you repeat the above code many times to solve this problem?
 
 We can do this using a `for` loop. The code below shows how to repeat everything inside the for loop 100 times. The variable `i` is an index, that goes from 1 to 100. The `saved_value` variable starts out as an empty variable, and then we put a value into it (at index position i, from 1 to 100). In this code, we put the sum of the products of x and y into the `saved_value` variable. At the end of the simulation, the `save_value` variable contains 100 numbers. The `min()` and `max()` functions are used to find the minimum and maximum values for each of the 100 simulations. You should be able to modify this code by replacing `sum(x*y)` with `cor(x,y)`. Doing this will allow you to run the simulation 100 times, and find the minimum correlation and maximum correlation that arises by chance. This will be estimate for question 1. To provide an estimate for question 2, you will need to change `n=10` to `n=100`.
 
@@ -277,16 +274,15 @@ max(saved_value)
 
 ```
 
-
 ### Writing assignment
 
 Answer the following questions with complete sentences. When you have finished everything. Knit the document and hand in your stuff (you can submit your .RMD file to blackboard if it does not knit.)
 
-1. Imagine a researcher found a positive correlation between two variables, and reported that the r value was +.3. One possibility is that there is a true correlation between these two variables. Discuss one alternative possibility that would also explain the observation of +.3 value between the variables.
+1.  Imagine a researcher found a positive correlation between two variables, and reported that the r value was +.3. One possibility is that there is a true correlation between these two variables. Discuss one alternative possibility that would also explain the observation of +.3 value between the variables.
 
-2. Explain the difference between a correlation of r = .3 and r = .7. What does a larger value of r represent?
+2.  Explain the difference between a correlation of r = .3 and r = .7. What does a larger value of r represent?
 
-3. Explain the difference between a correlation of r = .5, and r = -.5.
+3.  Explain the difference between a correlation of r = .5, and r = -.5.
 
 ## Excel
 
@@ -294,39 +290,38 @@ How to do it in Excel
 
 ## SPSS
 
-
 In this lab, we will use SPSS to calculate the correlation coefficient. We will focus on the most-commonly used Pearson's coefficient, r. We will learn how to:
 
-1. Calculate the Pearson's r correlation coefficient for bivariate data
-2. Produce a correlation matrix, reporting Pearson's r for more than two variables at a time
-3. Produce a scatterplot
-4. Split a data file for further analysis
+1.  Calculate the Pearson's r correlation coefficient for bivariate data
+2.  Produce a correlation matrix, reporting Pearson's r for more than two variables at a time
+3.  Produce a scatterplot
+4.  Split a data file for further analysis
 
-Let's first begin with a short data set we will enter into a new SPSS data spreadsheet. Remember, in order to calculate a correlation, you need to have bivariate data; that is, you must have at least two variables, x and y. You can have more than two variables, in which case we can calculate a correlation matrix, as indicated in the section that follows. 
+Let's first begin with a short data set we will enter into a new SPSS data spreadsheet. Remember, in order to calculate a correlation, you need to have bivariate data; that is, you must have at least two variables, x and y. You can have more than two variables, in which case we can calculate a correlation matrix, as indicated in the section that follows.
 
 ### Correlation Coefficient for Bivariate Data: Two Variables
 
----
+------------------------------------------------------------------------
 
-Let's use the following data set: {x= 1, 3, 2, 5, 4, 6, 5, 8, 9} {y= 6, 5, 8, 7, 9, 7, 8, 10, 13}. Notice there are two variables, `x` and `y`. Enter these into SPSS and name them appropriately. 
+Let's use the following data set: {x= 1, 3, 2, 5, 4, 6, 5, 8, 9} {y= 6, 5, 8, 7, 9, 7, 8, 10, 13}. Notice there are two variables, `x` and `y`. Enter these into SPSS and name them appropriately.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.11.png')
 ```
 
-Next, click <span style="color:blue">Analyze</span>, then <span style="color:blue">Correlate</span>, then <span style="color:blue">Bivariate</span>:
+Next, click [Analyze]{style="color:blue"}, then [Correlate]{style="color:blue"}, then [Bivariate]{style="color:blue"}:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.12.png')
 ```
 
-The next window will ask you to select variables to correlate. Since we have two (`x` and `y`) move them both from the left-hand field to the right-hand field using the arrow. Notice that in this window, <span style="color:blue">Pearson</span> is selected. This is the default setting (and the one we want), but notice there are other ways to calculate the correlation between variables. We will stick with Pearson's correlation coefficient for this course. 
+The next window will ask you to select variables to correlate. Since we have two (`x` and `y`) move them both from the left-hand field to the right-hand field using the arrow. Notice that in this window, [Pearson]{style="color:blue"} is selected. This is the default setting (and the one we want), but notice there are other ways to calculate the correlation between variables. We will stick with Pearson's correlation coefficient for this course.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.13.png')
 ```
 
-Now, click <span style="color:blue">OK</span>. 
+Now, click [OK]{style="color:blue"}.
 
 SPSS will produce an output table containing the correlation coefficient requested. Notice that the table is redundant; it gives us the correlation between x and y, the correlation between y and x, the correlation between x and itself, and the correlation between y and itself. Any variable correlated with itself will result in an r of 1. The Pearson r correlation between variables x and y is .765.
 
@@ -334,32 +329,31 @@ SPSS will produce an output table containing the correlation coefficient request
 knitr::include_graphics('img/3.4.14.png')
 ```
 
-
 ### Correlation Matrix
 
----
-
+------------------------------------------------------------------------
 
 In the event that you have more than two variables in your spreadsheet, and would like to evaluate correlations between several variables taken two at a time, you need not re-run the correlations in SPSS repeatedly. You can, in fact, enter multiple variables into the correlation window and obtain a correlation matrix--a table showing every possible bivariate correlation amongst a group of variables.
 
 To illustrate how this is done, let's add a new variable to our existing spreadsheet: variable `z`, {z= 1, 4, 2, 9, 5, 7, 12, 5, 3}
+
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.15.png')
 ```
 
-From here, go to <span style="color:blue">Analyze</span>, then <span style="color:blue">Correlate</span>, then <span style="color:blue">Bivariate</span>:
+From here, go to [Analyze]{style="color:blue"}, then [Correlate]{style="color:blue"}, then [Bivariate]{style="color:blue"}:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.16.png')
 ```
 
-Next, you will encounter the window that asks you to indicate which variables to correlate. Select all three variables (`x`, `y`, and `z`) and move them to the right-hand field using the arrow. 
+Next, you will encounter the window that asks you to indicate which variables to correlate. Select all three variables (`x`, `y`, and `z`) and move them to the right-hand field using the arrow.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.17.png')
 ```
 
-Click <span style="color:blue">OK</span>. SPSS will produce an output table that contains correlations for every pairing of our three variables, along with the correlations of each variable with itself. 
+Click [OK]{style="color:blue"}. SPSS will produce an output table that contains correlations for every pairing of our three variables, along with the correlations of each variable with itself.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.18.png')
@@ -367,21 +361,19 @@ knitr::include_graphics('img/3.4.18.png')
 
 According to this output:
 
-1. The correlation coefficient between variables `x` and `y` is .765
-2. The correlation coefficient between variables `x` and `z` is .294
-3. The correlation coefficient between variables `y` and `z` is -.080
-
+1.  The correlation coefficient between variables `x` and `y` is .765
+2.  The correlation coefficient between variables `x` and `z` is .294
+3.  The correlation coefficient between variables `y` and `z` is -.080
 
 ### Correlation and Scatterplots
 
----
-
+------------------------------------------------------------------------
 
 To accompany the calculation of the correlation coefficient, the scatterplot is the relevant visualization tool. Let's use data from The World Happiness Report, a questionnaire about happiness. [Here](https://github.com/CrumpLab/statisticsLab/blob/master/data/spssdata/WHR2018.sav) is a link to the file named WHR2018.sav.
 
 Using this data, let's answer the following question: does a country's measure for `freedom to make life choices` correlate with that country's measure for `Confidence in national government`?
 
-Let's find the correlation coefficient between these variables first. Go to <span style="color:blue">Analyze</span>, then <span style="color:blue">Correlate</span>, then <span style="color:blue">Bivariate</span>:
+Let's find the correlation coefficient between these variables first. Go to [Analyze]{style="color:blue"}, then [Correlate]{style="color:blue"}, then [Bivariate]{style="color:blue"}:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.19.png')
@@ -392,6 +384,7 @@ Next, a window will appear asking for the variables to be correlated. Go through
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.20.png')
 ```
+
 Click OK. SPSS will produce a correlation table.
 
 ```{r , echo=FALSE,dev='png'}
@@ -400,12 +393,14 @@ knitr::include_graphics('img/3.4.21.png')
 
 Based on this output, the correlation between `Freedom to make life choices` and `Confidence in national government` is .408.
 
-Let's continue to create the scatterplot for this data. Go to <span style="color:blue">Graphs</span>, then <span style="color:blue">Legacy Dialogs</span>, then <span style="color:blue">Scatter...</span>
+Let's continue to create the scatterplot for this data. Go to [Graphs]{style="color:blue"}, then [Legacy Dialogs]{style="color:blue"}, then [Scatter...]{style="color:blue"}
+
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.22.png')
 ```
 
-In the next window, choose <span style="color:blue">Simple</span>, then <span style="color:blue">Define</span>:
+In the next window, choose [Simple]{style="color:blue"}, then [Define]{style="color:blue"}:
+
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.23.png')
 ```
@@ -416,7 +411,7 @@ Next, move your two variables (`freedom to make life choices` and `confidence in
 knitr::include_graphics('img/3.4.24.png')
 ```
 
-Click <span style="color:blue">OK</span>. SPSS will produce a scatterplot of your data, as follows:
+Click [OK]{style="color:blue"}. SPSS will produce a scatterplot of your data, as follows:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.25.png')
@@ -428,61 +423,61 @@ You can keep this scatterplot as it is, or, you can edit it to include a straigh
 knitr::include_graphics('img/3.4.26.png')
 ```
 
-In this window, find the button at the top that reads <span style="color:blue">Fit Line at Total</span> when you hover your mouse over it. Below, I have highlighted it for clarity:
+In this window, find the button at the top that reads [Fit Line at Total]{style="color:blue"} when you hover your mouse over it. Below, I have highlighted it for clarity:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.27.png')
 ```
 
-Press this button and you will see a new menu. Make sure <span style="color:blue">Linear</span> is selected and click <span style="color:blue">Apply</span>.
+Press this button and you will see a new menu. Make sure [Linear]{style="color:blue"} is selected and click [Apply]{style="color:blue"}.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.28.png')
 ```
 
-Next, exit from the Chart Editor. This means you will hit the <span style="color:blue">X</span> in the corner of the window. You will find that the graph in your output window has now updated and has a line drawn on it.
+Next, exit from the Chart Editor. This means you will hit the [X]{style="color:blue"} in the corner of the window. You will find that the graph in your output window has now updated and has a line drawn on it.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.29.png')
 ```
 
-This scatterplot is very important. The distance between the line and the data points is indicative of the strength of the correlation coefficient; they are directly related. For example, if the data were more clustered or tighter to the line, the correlation would be stronger. If the data points are more spread out and far from the line, the correlation is weaker. 
+This scatterplot is very important. The distance between the line and the data points is indicative of the strength of the correlation coefficient; they are directly related. For example, if the data were more clustered or tighter to the line, the correlation would be stronger. If the data points are more spread out and far from the line, the correlation is weaker.
 
 ### Splitting a File
 
----
+------------------------------------------------------------------------
 
 What if we asked the question: for the year 2017 only, does a countries measure for `freedom to make life choices` correlate with that countries measure for `Confidence in national government`?
 
-Notice that this question is asking us to find the correlation between the same two variables we used in the previous example, but only in the case where the year is 2017. To acheive this, we're going to utilize a function called splitting. Splitting takes the file as a whole, and sets it up so that every analysis is done on some subset of the data. For example, if we split our data by year and calculate a correlation coefficient, SPSS will find Pearson r for only 2017, and another for only 2016, and so on. 
+Notice that this question is asking us to find the correlation between the same two variables we used in the previous example, but only in the case where the year is 2017. To acheive this, we're going to utilize a function called splitting. Splitting takes the file as a whole, and sets it up so that every analysis is done on some subset of the data. For example, if we split our data by year and calculate a correlation coefficient, SPSS will find Pearson r for only 2017, and another for only 2016, and so on.
 
-In order to split the data, we go to the top menu and choose <span style="color:blue">Data</span>, then <span style="color:blue">Split file...</span>
+In order to split the data, we go to the top menu and choose [Data]{style="color:blue"}, then [Split file...]{style="color:blue"}
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.30.png')
 ```
 
-In the next window, you must select <span style="color:blue">Organize output by groups</span> and then specify which variable will be used to split the data. Select `year` and move it to the right-hand field using the arrow. 
+In the next window, you must select [Organize output by groups]{style="color:blue"} and then specify which variable will be used to split the data. Select `year` and move it to the right-hand field using the arrow.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.31.png')
 ```
 
-Click <span style="color:blue">OK</span>. Notice that this will cause the output window to produce some next indicating that you have split your file. You can ignore this and go back to your data window.
+Click [OK]{style="color:blue"}. Notice that this will cause the output window to produce some next indicating that you have split your file. You can ignore this and go back to your data window.
 
-From here, any analysis you choose to do will be done separately for each year's worth of data. Let's calculate the correlation coefficient, as usual. Click <span style="color:blue">Analyze</span>, then <span style="color:blue">Correlate</span>, then <span style="color:blue">Bivariate</span>:
+From here, any analysis you choose to do will be done separately for each year's worth of data. Let's calculate the correlation coefficient, as usual. Click [Analyze]{style="color:blue"}, then [Correlate]{style="color:blue"}, then [Bivariate]{style="color:blue"}:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.32.png')
 ```
 
-In the next window, select the variables to be used (they will be the same as in the last example). 
+In the next window, select the variables to be used (they will be the same as in the last example).
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.33.png')
 ```
 
-Click <span style="color:blue">OK</span>. Notice that in the output window you will see a bunch of correlation tables (13 of them to be exact); one for each year. Scroll down and find the table with the heading "year = 2017". That's the table we need in order to answer our question:
+Click [OK]{style="color:blue"}. Notice that in the output window you will see a bunch of correlation tables (13 of them to be exact); one for each year. Scroll down and find the table with the heading "year = 2017". That's the table we need in order to answer our question:
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.34.png')
@@ -490,32 +485,105 @@ knitr::include_graphics('img/3.4.34.png')
 
 This table indicates that, if we only look at the year 2017, the correlation coefficient between `freedom to make life choices` and `confidence in national government` is .442.
 
-It is VERY important to remember that once you have split a file, every analysis that follows the split will be done on the split variable. If you want to go back to performing analyses and calculating statistics for the data as a whole, you must UNSPLIT your data file (or undo the split). To do this, go to <span style="color:blue">Data</span>, then <span style="color:blue">Split file...</span>
+It is VERY important to remember that once you have split a file, every analysis that follows the split will be done on the split variable. If you want to go back to performing analyses and calculating statistics for the data as a whole, you must UNSPLIT your data file (or undo the split). To do this, go to [Data]{style="color:blue"}, then [Split file...]{style="color:blue"}
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.35.png')
 ```
 
-Then make sure to select <span style="color:blue">Analyze all cases, do not create groups</span> and click <span style="color:blue">OK</span>.
+Then make sure to select [Analyze all cases, do not create groups]{style="color:blue"} and click [OK]{style="color:blue"}.
 
 ```{r , echo=FALSE,dev='png'}
 knitr::include_graphics('img/3.4.36.png')
 ```
 
-
-
 ### Practice Problems
 
-___
+------------------------------------------------------------------------
 
+1.  For the year 2005 ONLY, find the correlation between “perceptions of corruption” and “positive affect”. Create a scatterplot to visualize this relationship. What are your conclusions about the relationship between affect and perceived corruption? Is this surprising to you?
 
-1. For the year 2005 ONLY, find the correlation between “perceptions of corruption” and “positive affect”. Create a scatterplot to visualize this relationship. What are your conclusions about the relationship between affect and perceived corruption? Is this surprising to you?
+2.  What has happened to log GDP (consider this a measure of GDP) in the United States ONLY with time (as the year has increased)? Explain this relationship and provide a scatterplot.
 
-2. What has happened to log GDP (consider this a measure of GDP) in the United States ONLY with time (as the year has increased)? Explain this relationship and provide a scatterplot.
-
-3. Which country (or countries) have seen a more consistent and strong increase in log GDP over time? Which country (or countries) have seen a decrease over time?
+3.  Which country (or countries) have seen a more consistent and strong increase in log GDP over time? Which country (or countries) have seen a decrease over time?
 
 ## JAMOVI
 
 How to do it in JAMOVI
 
+## CogStat
+
+### Goals
+
+-   Run correlations in CogStat
+-   Understand the meaning of the results
+
+In this chapter, we will run correlations with CogStat and interpret what we see in the output. We will also take a look at the regression line. For this, we will use data from “The World Happiness Report” (<https://worldhappiness.report/>), which can be found in the dataset “WHR2018”. The dataset contains responses to a questionnaire about happiness from around the world.
+
+Correlation can be computed between any two ordinal or interval variables. When we run a correlation, we would like to know something about the relations between two variables. In CogStat, this matter can be investigated with the “Explore relations of variable par” analysis.
+
+#### Does a country's measure for “Freedom to make life choices” correlate with that country's measure for "Confidence in national government"?
+
+First, load into CogStat and then take a look at the “WHR2018” dataset. You should be able to see that there are data for many different countries across different years. There are lots of different kinds of measures, and each is given a name.
+
+In CogStat, to look at the relations between the variables “Freedom to make life choices” and "Confidence in national government" we select the“Explore relations of variable pair” analysis (or press Ctrl + 2).
+
+![](images/variablepair.png)
+
+or
+
+![](images/variablepair2-01.png)
+
+Choose the variables “Freedom to make life choices” and “Confidence in national government” as “Selected variables” and press “OK”.
+
+![](images/variablepair3.png)
+
+If you take a look at the top of the output, you will see the “Raw data” section, in which there is a scatterplot with the data points of our two variables.
+
+![](images/vpraw.png)
+
+![](images/vpscatter.png)
+
+This section also shows that 1395 pairs could be observed, and 167 pairs count as missing information. Data points with missing values are automatically excluded from the scatterplot, as they cannot be graphed. The scatterplot shows us that if the freedom to make life choices increases, then the confidence in the national government increases, too. This visual inspection suggests a positive correlation.
+
+You can find a quantified measure of the relation at the end of the Population Properties section of the results. It shows that this correlation is very weak and not significant. (rs(119) = 0.17, p = .057) The results are displayed in APA format.
+
+![](images/corrhip.png)
+
+### What is the relationship between positive affect and negative affect in a country?
+
+It is quite an interesting question, and we probably guess, that it could be a negative correlation here: When positive feelings generally go up, should not negative feelings generally go down? To find out, select “Explore relations of variable pair” analysis from the toolbar or from the Analysis menu. Choose “Positive affect” and “Negative affect” as “Selected variables”, then press “OK”.
+
+![](images/vpposnegeff.png)
+
+At the top of the output, you can see the “Raw data” first, with a scatterplot.
+
+![](images/vpposnegeff2.png)
+
+If we scroll lower, in the Sample properties, we can see this scatterplot with a line (the linear regression line), that shows us whether the regressor line goes up or down. The direction of the regressor line corresponds to whether the correlation is positive or negative between our two variables. Since here the regressor line goes downwards, that means, that the correlation is negative.
+
+![](images/vpposnegeff3regrline.png)
+
+Moreover, we can take a look at the values of Pearson’s and Spearman’s correlations (result: Pearson's correlation: r(1540) = -0.38, p \< .001). This means that there is a negative, weak, and significant (if p\<0.05 = the test is significant) correlation between the variables “Negative affect” and “Positive affect”.
+
+![](images/standardes.png)
+
+Overall, these results mean, what we already guessed when we started to solve this task. As there is more positive affect, there is also less negative affect.
+
+And just like that, you can run and interpret the results of a correlation.
+
+A little reminder (According to certain conventions):
+
+-   r= +/- 0-0.2= very weak correlation
+-   r= +/- 0.2-0.4= weak correlation
+-   r= +/- 0.4-0.6= moderate correlation
+-   r= +/- 0.6-0.8= strong correlation
+-   r= +/- 1\>0.8= very strong correlation
+
+### The importance of chance
+
+There is one more important thing to mention, which is the phenomenon of chance. We can find correlations by chance alone, even when there is no true correlation between the variables. For example, we can sample randomly into two variables, which we know are not related because we randomly sampled the numbers. However, doing this creates some correlations over time just by chance, especially with smaller sample sizes. For example in the picture below you can see that the slope of the blue line is not always flat.
+
+![](images/corrchance.png)
+
+Sometimes it looks like there is a correlation when we know there should not be one. These correlations are created by chance only, and this is why we have to be very cautious when interpreting our results. The point is, that now you know, you can find correlations or any results by chance only. So, you should always wonder if the correlations you find reflect a meaningful association between the x and y variables or if it is something else.
